[package]
name = "linkstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
env_logger = "0.9"
err-derive = "0.3"
futures = "0.3"
im = "15"
log = "0.4"
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = ["trust-dns"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
